add intable anchor / add content on pick lists

--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -161,7 +161,7 @@ Allgemeine Einstellungen vornehmen:
 |image:warenwirtschaft:icon_speaker.png[width=14, height=14]
 |Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält die Warnungen und Bestätigungshinweisen, die innerhalb von plentyWarehouse in Texform erscheinen, als gesprochenen Text, der über das Gerät wiedergegeben wird. Je nach Andwendungsfall kann dies für dein Lagerpersonal nützlich sein.
 
-| *Sonstiges* 
+| [#intable-other-settings]*Sonstiges* 
 |icon:settings[set=material]
 |*Shortcut-Verhalten*: Bestimme, was geschieht, wenn du während der Nutzung einer Funktion auf einen der runden Buttons am rechten Bildschirmrand tippst. Durch diese Aktion gelangst du direkt in eine weitere Funktion und sparst dir damit einige Schritte. +
 *Dialog anzeigen*: Wenn du diese Option auswählst, wirst du jedes Mal, wenn du auf einen Shortcut tippst, ein Dialog angezeigt. So kannst du immer neu entscheiden, ob du nach Abschluss der folgenden Funktion in die vorherige Funktion zurückkehren möchtest oder nicht. +
