--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -8,14 +8,14 @@ include:partial$hinweis-voraussetzungen.adoc[]
 
 Die Pickliste ist ein wichtiges Dokumente für dein Lagerpersonal, denn sie enthält alle Informationen darüber, wie viele Artikel von welchen Lagerorten geholt werden müssen, um einen Auftrag abzuwickeln.
 
-Mit plentyWarehouse kann das Lagerpersonal Picklisten, die xref:auftraege:pickliste.adoc#300[in deinem plentymarkets System erstellt] wurden, bequem auf mobilen Geräten suchen, öffnen und bearbeiten.
+Mit plentyWarehouse kann dein Lagerpersonal Picklisten, die xref:auftraege:pickliste.adoc#300[in deinem plentymarkets System erstellt] wurden, bequem auf mobilen Geräten suchen, öffnen und bearbeiten.
 
 [#100]
 == Einstellungen für Picklisten vornehmen
 
-Die Funktion zur Arbeit mit mobilen Picklisten in plentyWarehouse lässt sich mithilfe einiger grundlegenden Einstellungen auf deine Bedürfnisse und Arbeitsabläufe anpassen.
+Bevor Picklisten zum ersten Mal in plentyWarehouse bearbeitet werden, solltest du einige vorbereitende Einstellungen vornehmen. Mithilfe dieser Einstellungen lässt sich der Ablauf beim Picken auf deine Bedürfnisse und Arbeitsabläufe anpassen.
 
-So kannst du beispielsweise bestimmen, wie die Artikel der Pickliste im Lager erfasst werden sollen und ob du für die Abarbeitung der Pickliste eine <<#option-trolleytag, Wagenkennung>> vergeben möchtest.
+So kannst du beispielsweise bestimmen, wie die Artikel der Pickliste im Lager erfasst werden sollen und ob du für die Abarbeitung der Pickliste eine xref:warenwirtschaft:mobile-picklisten.adoc#intable-trolleytag[Wagenkennung] vergeben möchtest.
 
 [.instruction]
 Einstellungen für Picklisten vornehmen:
@@ -41,12 +41,12 @@ Einstellungen für Picklisten vornehmen:
 *Datum aufsteigend* = Picklisten werden aufsteigend nach ihrem Erstellungsdatum sortiert. Somit beginnt die Liste mit der ältesten Pickliste. +
 *Datum absteigend* = Picklisten werden absteigend nach ihrem Erstellungsdatum sortiert. Somit beginnt die Liste mit der neuesten Pickliste.
 
-| [#option-trolleytag]*Eingabe einer Wagenkennung ermöglichen*
-|Aktiviere diese Option, um beim Öffnen einer Pickliste die Option zur Eingabe einer Wagenkennung anzubieten. Diese Zuordnung macht Sinn, wenn du einen bestimmten Kommissionierwagen als Behälter für die Artikel der Pickliste verwenden möchtest. Stelle sicher, dass du die gleiche Kennung auch am Kommissionierwagen angebracht hast, sodass der Wagen und die Pickliste korrekt zugeordnet werden.
+| [#intable-trolleytag]*Eingabe einer Wagenkennung ermöglichen*
+|Aktiviere diese Option, um beim Öffnen einer Pickliste die Option zur Eingabe einer Wagenkennung anzubieten. Diese Zuordnung macht Sinn, wenn du einen bestimmten Kommissionierwagen als Behälter für die Artikel der Pickliste verwenden möchtest. Stelle sicher, dass du die gleiche Kennung auch am Kommissionierwagen angebracht hast, sodass der Wagen und die Pickliste korrekt zugeordnet werden. Weitere Informationen findest du im Kapitel <<#330, Wagenkennung verwenden>>.
 
 2+| Bereich *Artikelerfassung*
 
-| [#option-itemscan]*Verpflichtender Artikel-Scan*
+| [#intable-itemscan]*Verpflichtender Artikel-Scan*
 |Verwende diese Option, um festzulegen, welche Regeln für das Erfassen von Artikeln der Pickliste gelten sollen. +
 *Keine Einschränkungen* = Artikel können entweder durch Scannen des Barcodes oder per manueller Auswahl erfasst werden. +
 *Artikelsuche einschränken* = Artikel ohne Barcode können über die Artikelsuche erfasst werden. Artikel mit Barcode _müssen_ durch Scannen des Barcodes auf dem Artikeletikett erfasst werden. +
@@ -71,18 +71,18 @@ Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt se
 include::_includes:page$rechte.adoc[]
 
 [#300]
-== Artikel picken
+== Pickliste bearbeiten
 
 Nachdem du die vorbereitenden Einstellungen für Picklisten vorgenommen und die notwendigen Rechte vergeben hast, kannst du mit dem eigentlichen Picken der Artikel beginnen.
 
-Stelle zuerst sicher, dass alle benötigten Picklisten bereits im Menü *Aufträge » Fulfillment* im Backend deines plentymarkets Systems erzeugt wurden. Weitere Informationen dazu findest du bei Bedarf auf der Handbuchseite xref:auftraege:pickliste.adoc#[Picklisten]. 
+Stelle zuerst sicher, dass alle benötigten Picklisten bereits im Menü *Aufträge » Fulfillment* im Backend deines plentymarkets Systems erzeugt wurden. Weitere Informationen dazu findest du auf der Handbuchseite xref:auftraege:pickliste.adoc#[Picklisten]. 
 
-Die so erstellten Picklisten werden automatisch mit plentyWarehouse synchronisiert. Das heißt, dass die Picklisten in der App gesucht und aufgerufen werden können.
+Die so erstellten Picklisten werden automatisch mit plentyWarehouse synchronisiert. Picklisten können also jederzeit in der App gesucht und aufgerufen werden.
 
 [#310]
 === Pickliste öffnen
 
-Zuerst öffnest du die Pickliste, die du abarbeiten möchtest. Gehe dazu wie unten beschrieben vor.
+Öffne zunächst die Pickliste, die du bearbeiten möchtest. Gehe dazu wie unten beschrieben vor.
 
 [instruction]
 Pickliste öffnen:
@@ -90,23 +90,58 @@ Pickliste öffnen:
 . xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links. +
 icon:map-signs[] *_Oder:_*: Finde die Kachel zu *Picklisten* im Bereich *Funktionen* auf dem Dashboard.
-. Tippe auf *Picklisten* (image:warenwirtschaft:icon_pick-lists.png[width=14, height=14]).
+. Tippe auf *Picklisten* (image:warenwirtschaft:icon_pick-lists.png[width=14, height=14]). +
 → Es werden automatisch alle verfügbaren Picklisten angezeigt.
 . Tippe oben rechts auf icon:filter_list[set=material], um die Picklisten nach ihrem Status zu filtern. Dabei kannst du auswählen, ob du nach Picklisten filtern möchtest, die *offen*, *in Bearbeitung* oder *abgeschlossen* sind.
-. Tippe auf *Suchen* (icon:search[role="darkGrey"]).
+. Tippe auf *Suchen* (icon:search[role="darkGrey"]). +
 → Die gefilterten Suchergebnisse werden angezeigt.
 . Tippe auf einen Eintrag in der Liste, um die entsprechende Pickliste zu öffnen. +
 *_Hinweis:_* Picklisten mit dem Status *abgeschlossen* können nicht erneut geöffnet werden. Möchtest du eine Pickliste öffnen, die *in Bearbeitung* ist, wirst du gefragt, ob du die Arbeit an der Pickliste fortsetzen oder von vorn beginnen möchtest. +
 → Die Pickliste wird geöffnet.
 
+[TIP]
+.Pickliste per Scan öffnen
+====
+Alternativ zur oben beschriebenen Vorgehensweise kannst du auf das Barcode-Symbol (icon:barcode[set=material]) am oberen Bildschirmrand tippen. Scanne dann den Barcode einer bereits ausgedruckten Pickliste, um diese in plentyWarehouse zu öffnen. 
+====
+
 [#320]
 === Artikel picken
 
-Sobald du eine Pickliste geöffnet hast, wird dir direkt die Liste der Artikel angezeigt, die gepickt werden müssen. 
-Für jeden Artikel ist unter anderem der Lagerort angegeben, auf dem er sich befindet, sowie die Menge des Artikels, die gepickt werden muss.
+Sobald du eine Pickliste geöffnet hast, wird dir im Tab *Offen* direkt die Liste der Artikel angezeigt, die gepickt werden müssen. So werden alle Artikel nacheinander von den Lagerorten entnommen. Bereits gepickte Artikel kannst du einsehen, indem du auf das Tab *Gepickt* tippst.
 
+Für jeden Artikel wird neben weiteren Informationen der Lagerort angegeben, auf dem er sich befindet, sowie die Menge des Artikels, die gepickt werden muss.
 
+Je nachdem, welche Einstellung du für die Option xref:warenwirtschaft:mobile-picklisten.adoc#intable-itemscan[Verpflichtender Artikelscan] gewählt hast, kannst du die Artikel nun der Reihe nach Scannen oder die Menge über das xref:warenwirtschaft:mobile-picklisten.adoc#intable-enter-quantity[Mengenfeld] erfassen.
 
+Sobald alle Artikel gepickt wurden, erscheint die Meldung *Alle Artikel gepickt*. Tippe auf icon:done[set=material], um die Pickliste abzuschließen.
 
+[NOTE]
+.Shortcuts in der Artikelansicht
+====
+Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Dieese kannst du nutzen, um während der Arbeit mit der Pickliste unkompliziert weitere Aktionen durchzuführen. <<table-pick-list-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
+====
 
+[[table-pick-list-shortcuts]]
+.Verfügbare Shortcuts in der Artikelansicht
+[cols="2,1,6"]
+|====
+|Bedienelement |Symbol |Erläuterung
+
+|[intable-enter-quantity]*Menge eingeben*
+|icon:iso[set=material]
+| Öffnet die Ansicht zur Eingabe der Artikelmenge.
+
+| *Artikel verschieben*
+|icon:low_priority[set=material]
+| Verschiebt den Artikel an das Ende der Pickliste. Diese Funktion ist nützlich, wenn du einen Artikel vorerst überspringen möchtest, beispielsweise wenn er momentan nicht am angegebenen Lagerort vorhanden ist.
+
+| *Artikelinformationen* 
+|icon:info[set=material]
+| Öffnet eine Seite mit weiteren Informationen zum Artikel. Je nachdem, welche du Einstellung für die Option warenwirtschaft:installation-und-ersteinrichtung.adoc#intable-other-settings[Shortcut-Verhalten]gewählt hast, erscheint eine Abfrage, ob du nach dem Aufrufen der Artikelinformationen automatisch zur Pickliste zurückgeleitet werden möchtest.
+
+|====
+
+[#330]
+=== Wagenkennung verwenden
 
