add info on trolley tag

--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -145,3 +145,23 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 [#330]
 === Wagenkennung verwenden
 
+Optional kann einer Pickliste vor oder während der Bearbeitung eine Wagenkennung zugeordnet werden. Stelle dazu sicher, dass die Option xref:warenwirtschaft:mobile-picklisten.adoc#intable-trolleytag[Eingabe einer Wagenkennung ermöglichen] in den Einstellungen aktiviert ist. 
+
+Mithilfe einer Wagenkennung kann einerseits der Kommissionierwargen gekennzeichnet werden. Möchtest du beispielsweise Artikel für Amazon-Aufträge mit einem speziellen Wagen picken? Dann kannst du beispielsweise die Kennung `Amazon` vergeben oder einen QR- oder Barcode am Wagen nutzen, den du in plentyWarehouse Picklisten zuordnen kannst.
+
+Gehe wie unten beschrieben vor, um eine Wagenkennung an einer Pickliste zu speichern. 
+
+[.instruction]
+Wagenkennung vergeben:
+
+. <<310, Öffne die Pickliste>>.
+. Tippe oben rechts auf icon:more_vert[set=material].
+. Gib eine Wagenkennung ein. +
+*_Oder:_* Tippe auf icon:barcode[set=material], um einen QR- oder Barcode zu scannen.
+. Tippe auf *Hinzufügen*. +
+→ Die Wagenkennung wird an der Pickliste gespeichert.
+
+
+
+
+//Verwendung in Prozessen: So kann das Lagerpersonal am Packplatz diese Wagenkennung abscannen, um die Pickliste in den Prozessen zu laden und weiter zu bearbeiten. Dazu wurde in der Aktion Picklisten-Suche die Einstellung Wagenkennung hinzugefügt. 
