--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -4,9 +4,9 @@
 :id: A6QJGUV
 
 include::partial$hinweis-offene-beta.adoc[]
-include:partial$hinweis-voraussetzungen.adoc[]
+include::partial$hinweis-voraussetzungen.adoc[]
 
-Die Pickliste ist ein wichtiges Dokumente für dein Lagerpersonal, denn sie enthält alle Informationen darüber, wie viele Artikel von welchen Lagerorten geholt werden müssen, um einen Auftrag abzuwickeln.
+Die Pickliste ist ein wichtiges Dokumente für deine Mitarbeiter:innen im Lager. Sie enthält alle Informationen darüber, wie viele Artikel von welchen Lagerorten geholt werden müssen, um einen Auftrag abzuwickeln.
 
 Mit plentyWarehouse kann dein Lagerpersonal Picklisten, die xref:auftraege:pickliste.adoc#300[in deinem plentymarkets System erstellt] wurden, bequem auf mobilen Geräten suchen, öffnen und bearbeiten.
 
@@ -161,7 +161,22 @@ Wagenkennung vergeben:
 . Tippe auf *Hinzufügen*. +
 → Die Wagenkennung wird an der Pickliste gespeichert.
 
+Wenn du xref:automatisierung:prozesse.adoc#[Prozesse] für deine Auftragsabwicklung verwendest, kannst du die Wagenkennung ebenfalls nutzen, um Picklisten nach ihrer Wagenkennung zu filtern und weiter zu bearbeiten. Ergänze dazu deinen bestehenden Prozess im plentymarkets Backend um die Aktion *Picklisten-Suche*.
 
+[.instruction]
+Bestehenden Auftragsabwicklungsprozess anpassen:
 
+. Öffne das Menü *Einrichtung » Prozesse » [Prozess wählen]*.
+. Füge die Aktion hinzu. Nimm die Einstellungen gemäß <<table-trolley-tag-process>> vor.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
 
-//Verwendung in Prozessen: So kann das Lagerpersonal am Packplatz diese Wagenkennung abscannen, um die Pickliste in den Prozessen zu laden und weiter zu bearbeiten. Dazu wurde in der Aktion Picklisten-Suche die Einstellung Wagenkennung hinzugefügt. 
+[[table-trolley-tag-process]]
+.Aktion für die Suche nach Picklisten
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Aktion: Picklisten-Suche*
+|Füge die Aktion xref:automatisierung:aktionen.adoc#330[*Picklisten-Suche*] zum Arbeitsschrit xref:automatisierung:arbeitsschritte.adoc#auftragsbearbeitung[*Auftragsbearbeitung*] hinzu. Aktiviere in den Einstellungen der Aktion die Option *Wagenkennung*. Gib die Wagenkennung ein, nach der die Aktion filtern soll. Das Lagerpersonal am Packplatz kann dann gezielt die Wagenkennung scannen und die entsprechenden Picklisten in den Prozess laden.
+
+|====
