Denise/plentywarehouse pick lists (#353)
* add file from old PR

* add new page to nav.adoc
update links

* add icon and links

* add introduction and instructions

* add info

* add intable anchor / add content on pick lists

* add info on trolley tag

* add info

--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -93,6 +93,9 @@ a|Dieser Bereich enthält Kacheln mit Symbolen für die einzelnen Funktionen von
 
 * image:warenwirtschaft:icon_stocktaking.png[width=14, height=14] xref:warenwirtschaft:inventur-durchfuehren.adoc#[Inventur]
 
+* image:warenwirtschaft:icon_pick-lists.png[width=14, height=14] 
+xref:warenwirtschaft:mobile-picklisten.adoc#[Mit Picklisten arbeiten]
+
 Tippe auf eine Kachel, um schnell zur jeweiligen Funktion zu gelangen. Wenn du die Funktionen von plentyWarehouse einige Male genutzt hast, sortieren sich die Kacheln automatisch. So werden die Kacheln der am häufigsten genutzten Funktionen immer links in diesem Bereich angezeigt.
 
 | *Letzte Aktivitäten* 
@@ -158,7 +161,7 @@ Allgemeine Einstellungen vornehmen:
 |image:warenwirtschaft:icon_speaker.png[width=14, height=14]
 |Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält die Warnungen und Bestätigungshinweisen, die innerhalb von plentyWarehouse in Texform erscheinen, als gesprochenen Text, der über das Gerät wiedergegeben wird. Je nach Andwendungsfall kann dies für dein Lagerpersonal nützlich sein.
 
-| *Sonstiges* 
+| [#intable-other-settings]*Sonstiges* 
 |icon:settings[set=material]
 |*Shortcut-Verhalten*: Bestimme, was geschieht, wenn du während der Nutzung einer Funktion auf einen der runden Buttons am rechten Bildschirmrand tippst. Durch diese Aktion gelangst du direkt in eine weitere Funktion und sparst dir damit einige Schritte. +
 *Dialog anzeigen*: Wenn du diese Option auswählst, wirst du jedes Mal, wenn du auf einen Shortcut tippst, ein Dialog angezeigt. So kannst du immer neu entscheiden, ob du nach Abschluss der folgenden Funktion in die vorherige Funktion zurückkehren möchtest oder nicht. +
