--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -1,7 +1,6 @@
 = Mit Picklisten arbeiten
 :author: team-mobile
-:keywords: plentyWarehouse Picklisten, Picklisten App, Picklisten abarbeiten, Pick Liste App, Pick Liste plentyWarehouse
-:id: A6QJGUV
+:keywords: plentyWarehouse Picklisten, Picklisten App, Picklisten abarbeiten, Picklisten bearbeiten, mobile Pickliste, Pick Liste App, Pick Liste plentyWarehouse, Wagenkennung, Pickliste Kennung, Pickliste Prozesse
 
 include::partial$hinweis-offene-beta.adoc[]
 include::partial$hinweis-voraussetzungen.adoc[]
