fix icons, anchor and link

--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -57,7 +57,7 @@ Einstellungen für Picklisten vornehmen:
 
 |====
 
-[200]
+[#200]
 == Rechte für Picklisten vergeben
 
 Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt sein, dass alle Benutzer:innen über die entsprechenden Berechtigungen verfügen. Nur so können die Artikel korrekt gepickt werden und die Picklisten korrekt abgeschlossen werden.
@@ -101,7 +101,7 @@ icon:map-signs[] *_Oder:_*: Finde die Kachel zu *Picklisten* im Bereich *Funktio
 [TIP]
 .Pickliste per Scan öffnen
 ====
-Alternativ zur oben beschriebenen Vorgehensweise kannst du auf das Barcode-Symbol (icon:barcode[set=material]) am oberen Bildschirmrand tippen. Scanne dann den Barcode einer bereits ausgedruckten Pickliste, um diese in plentyWarehouse zu öffnen. 
+Alternativ zur oben beschriebenen Vorgehensweise kannst du auf das Barcode-Symbol (icon:barcode[role=darkGrey]) am oberen Bildschirmrand tippen. Scanne dann den Barcode einer bereits ausgedruckten Pickliste, um diese in plentyWarehouse zu öffnen. 
 ====
 
 [#320]
@@ -137,7 +137,7 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 
 | *Artikelinformationen* 
 |icon:info[set=material]
-| Öffnet eine Seite mit weiteren Informationen zum Artikel. Je nachdem, welche du Einstellung für die Option warenwirtschaft:installation-und-ersteinrichtung.adoc#intable-other-settings[Shortcut-Verhalten]gewählt hast, erscheint eine Abfrage, ob du nach dem Aufrufen der Artikelinformationen automatisch zur Pickliste zurückgeleitet werden möchtest.
+| Öffnet eine Seite mit weiteren Informationen zum Artikel. Je nachdem, welche du Einstellung für die Option xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#intable-other-settings[Shortcut-Verhalten]gewählt hast, erscheint eine Abfrage, ob du nach dem Aufrufen der Artikelinformationen automatisch zur Pickliste zurückgeleitet werden möchtest.
 
 |====
 
@@ -146,7 +146,7 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 
 Optional kann einer Pickliste vor oder während der Bearbeitung eine Wagenkennung zugeordnet werden. Stelle dazu sicher, dass die Option xref:warenwirtschaft:mobile-picklisten.adoc#intable-trolleytag[Eingabe einer Wagenkennung ermöglichen] in den Einstellungen aktiviert ist. 
 
-Mithilfe einer Wagenkennung kann einerseits der Kommissionierwargen gekennzeichnet werden. Möchtest du beispielsweise Artikel für Amazon-Aufträge mit einem speziellen Wagen picken? Dann kannst du beispielsweise die Kennung `Amazon` vergeben oder einen QR- oder Barcode am Wagen nutzen, den du in plentyWarehouse Picklisten zuordnen kannst.
+Mithilfe einer Wagenkennung kann einerseits der Kommissionierwargen gekennzeichnet werden. Möchtest du beispielsweise Artikel für Amazon-Aufträge mit einem speziellen Wagen picken? Dann kannst du beispielsweise die Kennung `Amazon` vergeben oder einen QR- oder Barcode am Wagen nutzen. Diese Kennung ordnest du dann in plentyWarehouse den gewünschten Picklisten zu.
 
 Gehe wie unten beschrieben vor, um eine Wagenkennung an einer Pickliste zu speichern. 
 
@@ -156,7 +156,7 @@ Wagenkennung vergeben:
 . <<310, Öffne die Pickliste>>.
 . Tippe oben rechts auf icon:more_vert[set=material].
 . Gib eine Wagenkennung ein. +
-*_Oder:_* Tippe auf icon:barcode[set=material], um einen QR- oder Barcode zu scannen.
+*_Oder:_* Tippe auf (icon:barcode[role=darkGrey]), um einen QR- oder Barcode zu scannen.
 . Tippe auf *Hinzufügen*. +
 → Die Wagenkennung wird an der Pickliste gespeichert.
 
