--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -70,7 +70,7 @@ Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt se
 include::_includes:page$rechte.adoc[]
 
 [#300]
-== Pickliste bearbeiten
+== Picklisten bearbeiten
 
 Nachdem du die vorbereitenden Einstellungen für Picklisten vorgenommen und die notwendigen Rechte vergeben hast, kannst du mit dem eigentlichen Picken der Artikel beginnen.
 
@@ -142,7 +142,7 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 |====
 
 [#330]
-=== Wagenkennung verwenden
+=== Wagenkennungen verwenden
 
 Optional kann einer Pickliste vor oder während der Bearbeitung eine Wagenkennung zugeordnet werden. Stelle dazu sicher, dass die Option xref:warenwirtschaft:mobile-picklisten.adoc#intable-trolleytag[Eingabe einer Wagenkennung ermöglichen] in den Einstellungen aktiviert ist. 
 
