fix broken links

--- a/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
@@ -317,8 +317,8 @@ Aktuell mögliche Platzhalter: +
 
 
 | *Bilder-Galerie*
-|Öffnet das Menü xref:webshop:cms.adoc#webspace[CMS » Webspace]. +
-Lade dort ein Bild hoch, kopiere den Link mit einem Klick auf icon:clipboard[role="yellow"] in die Zwischenablage, wechsele zurück in das Newsletter-Menü und klicke im Editor im Bereich *HTML Newsletter* auf *Bild*. Das Fenster *Bild-Eigenschaften* öffnet sich. Füge dort im Tab *Bild-Info* den kopierten Link zum Bild in das Feld *URL* ein, gib einen alternativen Text ein und füge im Tab *Link* den kopierten Link erneut in das Feld *URL* ein, um das Bild mit dem Newsletter zu verknüpfen.
+|Öffnet das Menü *CMS » Webspace*. +
+Lade dort ein Bild hoch (icon:file_upload[set=material]), kopiere den Link mit einem Klick auf icon:content_copy[set=material] in die Zwischenablage, wechsele zurück in das Newsletter-Menü und klicke im Editor im Bereich *HTML Newsletter* auf *Bild*. Das Fenster *Bild-Eigenschaften* öffnet sich. Füge dort im Tab *Bild-Info* den kopierten Link zum Bild in das Feld *URL* ein, gib einen alternativen Text ein und füge im Tab *Link* den kopierten Link erneut in das Feld *URL* ein, um das Bild mit dem Newsletter zu verknüpfen.
 
 | *Layout-Vorlage einspielen*
 |Bei Klick auf *Layout-Vorlage einspielen* wird die Anrede *[Guten Tag]* sowie der Platzhalter *[NAME]* im Bereich *HTML Newsletter* eingesetzt. Für den Platzhalter wird beim Versenden automatisch der Name der Person, die den Newsletter erhalten soll, eingefügt.
