Update links in welcome area

--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-versandoptionen.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-versandoptionen.adoc
@@ -234,7 +234,7 @@ Arbeite die Checkliste durch, um deine Einstellungen zum Thema Versandoptionen z
 [#800]
 == Mehr zum Thema Versandoptionen
 
-* xref:crm:kontakte-verwalten.adoc#15[Kundenklasse erstellen]
+* xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse erstellen]
 * link:https://marketplace.plentymarkets.com/plugins/payment[Zahlungsarten^]
 * xref:fulfillment:versand-vorbereiten.adoc#100[Lieferländer einrichten]
 * xref:fulfillment:versand-vorbereiten.adoc#400[Region erstellen]
