--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
@@ -48,6 +48,6 @@ Lieferant:innen einrichten:
 == Mehr zum Thema Lager und Lieferant:innen
 
 * xref:warenwirtschaft:lager-einrichten.adoc#[Lager einrichten]
-* xref:crm:kontakte-verwalten.adoc#100[Kontakte].
+* xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen].
 
 TIP: Weiter zum Thema xref:willkommen:schnelleinstieg-webshop-einleitung.adoc#[Webshop einrichten: Einleitung]
