--- a/docs/en-gb/modules/welcome/pages/quick-start-stock-management.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-stock-management.adoc
@@ -48,6 +48,6 @@ Setting up a supplier:
 == More about warehouses and suppliers
 
 * xref:stock-management:setting-up-a-warehouse.adoc#[Setting up a warehouse]
-* xref:crm:managing-contacts.adoc#100[Managing contacts].
+* xref:crm:create-contact.adoc#[Creating a contact].
 
 TIP: Continue with xref:welcome:quick-start-online-store-introduction.adoc#[Setting up the online store: Introduction]
