Update contact links in fulfillment area

--- a/docs/de-de/modules/fulfillment/pages/versand-center-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-center-2-0.adoc
@@ -562,7 +562,7 @@ Im Bereich *Übersicht* siehst du allgemeine Informationen zum Anmeldestatus des
 [#empfaenger]
 ==== Empfänger
 
-Im Bereich *Empfänger* siehst du einige Lieferdetails wie die Versandregion und die Adresse der Empfänger:in. Mit einem Klick auf die Kontakt-ID landest du direkt im Kontaktdatensatz im Menü *CRM » Kontakte*.
+Im Bereich *Empfänger* siehst du einige Lieferdetails wie die Versandregion und die Adresse der Empfänger:in. Mit einem Klick auf die Kontakt-ID landest du direkt im xref:crm:kontakt-bearbeiten.adoc#[Kontaktdatensatz] im Menü *CRM » Kontakte*.
 
 [#pakete]
 ==== Pakete
