--- a/docs/en-gb/modules/fulfilment/pages/shipping-centre-2-0.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/shipping-centre-2-0.adoc
@@ -551,7 +551,7 @@ In the *Overview* area, you can see general information regarding the order’s 
 [#recipient]
 ==== Recipient
 
-In the *Recipient* area, you can see some delivery details such as the shipping region and the recipient’s address. Click on the contact ID to open the contact data record in the *CRM » Contacts* menu.
+In the *Recipient* area, you can see some delivery details such as the shipping region and the recipient’s address. Click on the contact ID to open the xref:crm:edit-contact.adoc#[contact data record] in the *CRM » Contacts* menu.
 
 [#packages]
 ==== Packages
