--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -636,7 +636,7 @@ In der Aktion werden die verwendbaren Template-Variablen angezeigt. +
 
 | *Handelsvertreter dem Auftrag zuordnen*
 |Die Aktion hinterlegt einen Handelsvertreter in einem Auftrag. Die Zuordnung des Handelsvertreters erfolgt anhand der Postleitzahl der Empfänger:in des Auftrags. Voraussetzung für die Zuordnung des Handelsvertreters ist, dass in den Kontaktdaten des Handelsvertreters der Postleitzahlbereich hinterlegt ist. Es wird die Kontakt-ID des Handelsvertreters hinterlegt, nicht der Name. +
-Details findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#[Kontakte].
+Details findest du auf der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#kontaktdetails[Kontakt bearbeiten].
 
 | *Auftragsbestätigung an Fruugo senden*
 |Die Aktion sendet eine Auftragsbestätigung an den Marktplatz xref:maerkte:fruugo.adoc#[Fruugo].
@@ -785,10 +785,10 @@ Du kannst die so hinzugefügte Aktion wieder löschen (icon:minus-circle[role="r
 |Die Aktion sendet eine eBay-Nachricht an Kund:innen. Wähle dafür die passende Vorlage aus der Dropdown-Liste aus.
 
 | *Handelsvertreter dem Kunden zuordnen*
-|Die Aktion hinterlegt automatisch Handelsvertreter:innen in Kundendaten. Die Voraussetzung ist, dass jeweils Postleitzahlangaben in den Kundendaten der Handelsvertreter hinterlegt sind. Es wird die *Kunden-ID* der Handelsvertreter:in hinterlegt, nicht der Name. Weitere Details dazu findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#[Kontakte].
+|Die Aktion hinterlegt automatisch Handelsvertreter:innen in Kundendaten. Die Voraussetzung ist, dass jeweils Postleitzahlangaben in den Kundendaten der Handelsvertreter hinterlegt sind. Es wird die *Kunden-ID* der Handelsvertreter:in hinterlegt, nicht der Name. Weitere Details dazu findest du auf der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#kontaktdetails[Kontakt bearbeiten].
 
 | *Kundenklasse ändern*
-|Die Aktion ändert die xref:crm:kontakte-verwalten.adoc#15[Kundenklasse] eines Kontaktes. Wähle aus der Dropdown-Liste aus, welche Kundenklasse ein Kontakt erhalten soll. Zur Auswahl stehen die im System angelegten Kundenklassen.
+|Die Aktion ändert die xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse] eines Kontaktes. Wähle aus der Dropdown-Liste aus, welche Kundenklasse ein Kontakt erhalten soll. Zur Auswahl stehen die im System angelegten Kundenklassen.
 
 |====
 
