--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -635,7 +635,7 @@ The available template variables are listed within the procedure. +
 
 | *Assign sales representative to order*
 |The procedure saves a sales representative in an order. The sales representative is assigned according to the postcode of the address linked to the recipient of the order. For a sales representative to be assigned, it is mandatory that a range of postcodes is saved in the representative’s contact data. The contact ID of the sales representative is saved instead of the name. +
-For further information, refer to the xref:crm:managing-contacts.adoc#[Contacts] page of the manual.
+For further information, refer to the xref:crm:edit-contact.adoc#contact-details[Editing a contact] page of the manual.
 
 | *Send order confirmation to Fruugo*
 |The procedure sends an order confirmation to the market xref:markets:fruugo.adoc#[Fruugo].
@@ -785,10 +785,10 @@ You can delete (icon:minus-circle[role="red"]) the added procedure or you can ad
 |The procedure sends an eBay message to customers. Select a template from the drop-down list.
 
 | *Assign sales representative to customer*
-|The procedure automatically saves sales representatives in contact data. For a sales representative to be assigned, a range of postcodes has to be saved in the sales representative’s contact data. The *Contact ID* of the sales representative is saved, not the name. For further information, refer to the xref:crm:managing-contacts.adoc#[Contacts] page of the manual.
+|The procedure automatically saves sales representatives in contact data. For a sales representative to be assigned, a range of postcodes has to be saved in the sales representative’s contact data. The *Contact ID* of the sales representative is saved, not the name. For further information, refer to the xref:crm:edit-contact.adoc#contact-details[Editing a contact] page of the manual.
 
 | *Change customer class*
-|The procedure changes the xref:crm:managing-contacts.adoc#15[customer class] of a contact. Select which customer class the contact should get from the drop-down list. You can choose from the customer classes saved in your system.
+|The procedure changes the xref:crm:preparatory-settings.adoc#create-customer-class[customer class] of a contact. Select which customer class the contact should get from the drop-down list. You can choose from the customer classes saved in your system.
 
 |====
 
