--- a/docs/en-gb/modules/data/partials/catalogue-first-contact.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-first-contact.adoc
@@ -19,7 +19,7 @@ image::data:catalogue-overview-navigation.png[]
 [cols="1,2a"]
 |===
 
-| icon:menu[role="darkGrey"]
+| icon:menu[set=material]
 | Show or hide the navigation.
 
 | icon:search[role="darkGrey"] *Overview*
@@ -129,8 +129,7 @@ Restore a deleted catalogue. (<<#240, How?>>)
 *_Note_*: When you switch to another page, any catalogues you selected on the previous page are no longer selected.
 
 | icon:cog[role="darkGrey"]
-| Open the pop-up window for customising the overview. +
-<<#configure-columns, Additional information>>
+| Open the pop-up window to customise which columns are shown in the list. (<<#overview-customise, How?>>)
 
 |===
 
