ADD bank details table to new page

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -744,7 +744,46 @@ Hier werden die dem Kontakt zugehörigen Bankdaten angezeigt. Insgesamt werden d
 Klicke auf icon:more_vert[set=material], um die Bankdaten zu bearbeiten oder zu löschen. Klicke auf *Neu laden* (icon:refresh[set=material]), um den Bereich *Bankdaten* neu zu laden. Mit einem Klick auf *Neue Bankdaten hinzufügen* (icon:add[set=material]) wirst du in einen neuen Bankdatensatz weitergeleitet und erstellst dort einen neuen Bankdatensatz. +
 *_Hinweis:_* Jeder Bankdatensatz bekommt eine fortlaufende ID, die _nicht_ geändert werden kann. Die ID ist dabei jedoch nicht für einen Kontakt fortlaufend, sondern für alle Bankdatensätze, die du in deinem plentymarkets System erstellst.
 
-Klicke auf icon:more_vert[set=material], um die Bankdaten zu bearbeiten oder zu löschen.
+<<#table-bank-details>> listet die verfügbaren Felder im Bankdatensatz auf.
+
+[[table-bank-details]]
+.Verfügbare Felder im Bankdatensatz
+[cols="1,3"]
+
+|====
+|Einstellung |Erläuterung
+
+| *IBAN*, *BIC*, *Inhaber:in*, *Kontonummer*, *Bankleitzahl*
+|Wie lauten die Bankdaten des Kontakts? +
+Die Felder *IBAN* und *Inhaber:in* sind Pflichtfelder.
+
+| *Bankname, Straße, PLZ und Ort der Bank*
+|Wie lautet der Name und die Adresse der Bank?
+
+| *Land der Bank*
+|Wähle das Land aus der Dropdown-Liste.
+
+| *SEPA-Lastschriftmandat*
+|Standardmäßig ist das SEPA-Lastschriftmandat _nicht_ aktiviert (icon:toggle_off[set=material, role=darkGrey]. Aktiviere daher die Schaltfläche (icon:toggle_on[set=material, role=skyBlue]), wenn der Kontakt das SEPA-Lastschriftmandat unterschrieben hat. +
+*_Wichtig:_* Erst nach dem Aktivieren dieser Option können die pain.008-Formate für den xref:payment:bankdaten-verwalten.adoc#200[SEPA-Zahlungsverkehr] abgerufen werden.
+
+| *SEPA-Lastschriftmandat erteilt am*
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+Das Datum, an dem der Kontakt dem SEPA-Lastschriftmandat zugestimmt hat, wird angezeigt. Alternativ kannst du das Datum aus dem Kalender wählen (icon:today[set=material]).
+
+| *Art des Mandats*
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+Wähle eine Option aus der Dropdown-Liste: +
+*SEPA-Firmen-Lastschrift* = Mit dem Buchungsauftrag (Firmenkund:innen, B2B) vergleichbares Mandat. +
+*SEPA-Basis-Lastschrift* = Mit der Einzugsermächtigung (Standardkund:innen) vergleichbares Mandat.
+
+| *Ausführungsmodalität*
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+Wähle eine Option aus der Dropdown-Liste: +
+*Einmalige Zahlung* = Wird typischerweise für Standardaufträge verwendet. +
+*Wiederkehrende Zahlung* = Wird typischerweise für regelmäßige Abbuchungen, Abo-Verträge etc. verwendet.
+
+|====
 
 [#firma]
 === Firma
