--- a/docs/de-de/modules/maerkte/partials/kauflux-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kauflux-recommended-mappings.adoc
@@ -22,11 +22,11 @@ _Tipp:_ Wähle die Auftragsherkunft *Kauflux*.
 
 | Art der Bestandsführung
 | nein
-| 
+| Die *Art der Bestandsführung*, welche unter *Einrichtung » Märkte » Kauflux » Einstellungen* eingestellt wird.
 
 | Netto-Warenbestand
 | empfohlen
-|
+| * *Bestand » Virtuelles Gesamtlager*
 
 | Liefertyp
 | nein
@@ -42,7 +42,7 @@ _Tipp:_ Wähle die Auftragsherkunft *Kauflux*.
 
 | Umtauschfrist
 | nein
-|
+| Die Umtauschfrist nach Lieferung in Tagen, welche unter *Einrichtung » Märkte » Kauflux » Einstellungen* eingestellt wird.
 
 | Artikelname
 | nein
@@ -66,7 +66,7 @@ _oder_
 
 | Keywords
 | nein
-|
+| * *Artikeltext » Meta-Keywords*, Sprache *Deutsch*
 
 | Bild-URL 1
 | empfohlen
@@ -90,7 +90,7 @@ _oder_
 
 | UVP
 | nein
-|
+| * *Verkaufspreis » UVP*
 
 | Kategorie
 | empfohlen
@@ -134,7 +134,7 @@ _oder_
 
 | Menge
 | nein
-|
+| * *Variante » Wert des Inhalts*
 
 | Mengeneinheit
 | nein
