update contact links in Daten area

--- a/docs/de-de/modules/daten/pages/auftraege.adoc
+++ b/docs/de-de/modules/daten/pages/auftraege.adoc
@@ -606,7 +606,7 @@ Im Datenfeldordner *Dokumente* sind Datenfelder mit Informationen zu Auftragsdok
 [#290]
 === Adressen
 Im Datenfeldordner *Adressen* sind Datenfelder mit Informationen zu Adressen von Aufträgen gruppiert. +
-Weitere Informationen zu Adressen erhältst du im Handbuchkapitel xref:crm:kontakte-verwalten.adoc#590[Adressen verwalten].
+Weitere Informationen zu Adressen erhältst du im Handbuchkapitel xref:crm:kontakt-bearbeiten.adoc#adressen[Adressen].
 
 *_Beachte_*: Jedes dieser Datenfelder kann sowohl für Rechnungs- als auch Lieferadressen verwendet werden. Triff nach Hinzufügen des Datenfelds die Auswahl für die Dropdown-Liste *Adresstyp wählen*. Passe die Export keys entsprechend an.
 
@@ -700,7 +700,7 @@ Der automatisch generierte Export key für dieses Datenfeld ist *address.options
 [#310]
 === Kontakt
 Im Datenfeldordner *Kontakt* sind Datenfelder zum Kontakt des Auftrags gruppiert. +
-Weitere Informationen zu Kontakten erhältst du im Handbuchkapitel xref:crm:kontakte-verwalten.adoc#90[Kontakte und Firmen verwalten].
+Weitere Informationen zu Kontakten erhältst du auf der Handbuchseite xref:crm:kontakte.adoc#[Kontakte].
 
 [[katalog-datenfelder-ordner-kontakt]]
 .Datenfelder im Ordner *Kontakt*
@@ -720,11 +720,11 @@ Wenn es sich um eine Gastbestellung handelt, bleibt dieses Feld in der Exportdat
 
 | *Typ-ID*
 | Exportiert den Kontakttyp als ID. Die IDs und Namen von standardmäßig im System angelegten und eigenen Typen findest du im Menü *Einrichtung » CRM » Typen*. Der automatisch generierte Export key für dieses Datenfeld ist *contact.typeId*. +
-Informationen zu Typen erhältst du im Handbuchkapitel xref:crm:kontakte-verwalten.adoc#20[Typ erstellen].
+Informationen zu Typen erhältst du im Handbuchkapitel xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typ erstellen].
 
 | *Typname*
 | Exportiert den Kontakttyp als Namen. Die IDs und Namen von standardmäßig im System angelegten und eigenen Typen findest du im Menü *Einrichtung » CRM » Typen*. Der automatisch generierte Export key für dieses Datenfeld ist *contact.typeName*. +
-Informationen zu Typen erhältst du im Handbuchkapitel xref:crm:kontakte-verwalten.adoc#20[Typ erstellen].
+Informationen zu Typen erhältst du im Handbuchkapitel xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typ erstellen].
 
 | *Vorname*
 | Exportiert den Vornamen des Kontakts. Der automatisch generierte Export key für dieses Datenfeld ist *contact.firstName*.
@@ -743,14 +743,14 @@ Informationen zu Typen erhältst du im Handbuchkapitel xref:crm:kontakte-verwalt
 
 | *Kundenklassen-ID*
 | Exportiert die ID der Kundenklasse, die diesem Kontakt zugeordnet ist. Der automatisch generierte Export key für dieses Datenfeld ist *contact.classId*. +
-Informationen zu Kundenklassen erhältst du im Handbuchkapitel xref:crm:kontakte-verwalten.adoc#15[Kundenklasse erstellen].
+Informationen zu Kundenklassen erhältst du im Handbuchkapitel xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse erstellen].
 
 | *Bewertung*
 | Exportiert die Bewertung des Kontakts. Der automatisch generierte Export key für dieses Datenfeld ist *contact.rating*.
 
 | *Buchungskonto*
 | Exportiert das Buchungskonto bzw. Debitorenkonto des Kontakts. Der automatisch generierte Export key für dieses Datenfeld ist *contact.bookAccount*. +
-Informationen zu Kontakten und zum Debitorenkotno erhältst du im Handbuchkapitel xref:crm:kontakte-verwalten.adoc#intable-kontakt-bearbeiten-debitorenkonto[Kontakt bearbeiten].
+Informationen zu Kontakten und zum Debitorenkonto erhältst du auf der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten].
 
 | *Sprache*
 | Exportiert die Sprache des Kontakts. Der automatisch generierte Export key für dieses Datenfeld ist *contact.lang*.
