--- a/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
+++ b/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
@@ -6,6 +6,7 @@
 
 ////
 zuletzt bearbeitet 17.03.2021
+(Links zur neuen Kontakte-Seite angepasst (Alex) am 09.05.2022)
 ////
 
 Neugierig, wer Änderungen an einem bestimmten Artikel, Preis, Auftrag usw. vorgenommen hat?
@@ -474,7 +475,7 @@ Hast du ein Menü unter *Menü-Sichtbarkeiten* ausgewählt, werden automatisch a
 
 //tag::crm[]
 
-Mit Hilfe der Änderungshistorie im Menü *Daten » CRM-Historie* kannst du Änderungen an Kundendaten, ShopBooster-Daten oder die Einstellungen zur Datenbereinigung nachvollziehen.
+Mit Hilfe der Änderungshistorie im Menü *Daten » CRM-Historie* kannst du Änderungen an xref:crm:kontakte.adoc#[Kontaktdaten], ShopBooster-Daten oder die Einstellungen zur xref:daten:datenbereinigung.adoc#[Datenbereinigung] nachvollziehen.
 Die Daten in diesem Menü werden 1 Jahr gespeichert.
 
 [.instruction]
