--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -16,7 +16,7 @@ Für den Export verschiedener Daten stehen dir verschiedene Standardformate zur 
 * Um zum Beispiel deine Warenbestände zu exportieren, nutzt du das Standardformat xref:daten:katalog-warenbestaende.adoc#[Warenbestände].
 * Zum Export von Artikeldaten steht das Standardformat xref:daten:katalog-artikel.adoc#[Artikel] zur Verfügung.
 
-NOTE: Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportieren. Bis Standardformate für alle Datenarten verfügbar sind, kannst du weiterhin den xref:daten-exportieren:FormatDesigner.adoc#[Formatdesigner] nutzen.
+NOTE: Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportieren. Bis Standardformate für alle Datenarten verfügbar sind, kannst du weiterhin den xref:daten:FormatDesigner.adoc#[Formatdesigner] nutzen.
 
 [#first-contact]
 == Erstes Kennenlernen
