some small updates

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -192,7 +192,9 @@ Wenn du das nächste Mal einen Kontaktdatensatz bearbeiten möchtest, kannst du 
 
 Alle im Kontaktdatensatz verfügbaren Bereiche und deren Funktionen werden in den folgenden Unterkapiteln erläutert. Mit einem Klick auf einen Eintrag in der folgenden Liste gelangst du direkt in das jeweilige Unterkapitel, in dem du weitere Informationen findest.
 
-// TODO: Screenshot von der Side Nav einfügen, wenn sie final ist.
+//// 
+TODO: Screenshot von der Side Nav einfügen, wenn sie final ist.
+////
 
 [TIP]
 .Wie werden die Daten in den einzelnen Bereichen geladen?
@@ -365,7 +367,9 @@ Mit einem Klick auf icon:more_vert[set=material] in der Zeile des Ordners kannst
 
 Klicke auf *Dokumente hochladen* (icon:file_upload[set=material]), um eine Datei von deinem Computer auszuwählen oder ziehe die Dokumente per Drag-and-drop in den entsprechenden Bereich. Wenn das Dokument erfolgreich hochgeladen wurde, wird in der Übersicht das Symbol des Dateityps, der Name, das Datum und die Uhrzeit der letzten Änderung sowie die Dateigröße angezeigt.
 
-// TODO: Screenshot einfügen
+//// 
+TODO: Screenshot einfügen
+////
 
 [#dokumente-suchen]
 ==== Dokumente suchen 
@@ -373,7 +377,9 @@ Klicke auf *Dokumente hochladen* (icon:file_upload[set=material]), um eine Datei
 Nutze die Suche im Bereich *Dokumente*, um die zum Kontakt hochgeladenen Dokumente schnell und einfach zu finden. +
 Beachte, dass sich die Suche immer nur auf den aktuell gewählten Ordner bezieht. Eine übergreifende Suche in allen von dir erstellten Ordnern ist nicht möglich.
 
-// TODO: ist es für die Zukunft noch geplant, dass die Suche sich nicht nur auf den gewählten Ordner, sondern auf alle Ordner bezieht?
+////
+TODO: ist es für die Zukunft noch geplant, dass die Suche sich nicht nur auf den gewählten Ordner, sondern auf alle Ordner bezieht?
+////
 
 [.instruction]
 Dokumente suchen:
@@ -790,7 +796,9 @@ Wähle eine Option aus der Dropdown-Liste: +
 
 Hier siehst du die dem Kontakt zugeordnete Firma bzw. kannst dem Kontakt eine Firma zuordnen.
 
-// TODO: wording bzgl. "verknüpft" und "zugeordnet" vereinheitlichen; dazu auch in der Firmen-UI schauen.
+////
+TODO: wording bzgl. "verknüpft" und "zugeordnet" vereinheitlichen; dazu auch in der Firmen-UI schauen.
+////
 
 ==== Firma ist noch nicht verknüpft
 
@@ -1098,7 +1106,7 @@ Möchtest du wissen, welche Typen und Subtypen in den Optionen verfügbar sind? 
 | *Payment*
 | *Mollie*
 
-// TODO:Mollie wird nun standardmäßig in den Optionen angezeigt?
+// TODO: Mollie wird nun standardmäßig in den Optionen angezeigt?
 
 | *Benutzername*
 | *Privat*
@@ -1502,9 +1510,9 @@ Zahlungsziel für mehrere Kontakte speichern:
 
 Gastbestellungen erkennst du generell an dem Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast*.
 
-Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über deinen plentyShop LTS in dein System kommen, _kein_ Kontaktdatensatz mit einer Kontakt-ID erstellt. plentyShop-Gastbestellungen können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden, da sie faktisch kein Kontakt sind. Die Daten aus der plentyShop-Gastbestellung können nur über die Adressdaten im Menü *CRM » Schnellsuche* gefunden und dort auch nur in einen regulären Kontaktdatensatz umgewandelt werden.
+Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über deinen plentyShop LTS in dein System kommen, _kein_ Kontaktdatensatz mit einer Kontakt-ID erstellt. plentyShop-Gastbestellungen können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden, weil sie faktisch keine Kontakte sind. Die Daten aus der plentyShop-Gastbestellung können nur über die Adressdaten im Menü *CRM » Schnellsuche* gefunden und dort auch nur in einen regulären Kontaktdatensatz umgewandelt werden.
 
-Gastbestellungen, die über einen Marktplatz in dein System kommen, erhalten eine Kontakt-ID. Daher kannst du Marktplatz-Gastbestellungen auch im Kontaktdatensatz im Menü *CRM » Kontakte* in einen regulären Kontaktdatensatz umwandeln. Gehe dazu wie im Folgenden beschrieben vor.
+Gastbestellungen, die über einen Marktplatz in dein System kommen, erhalten eine Kontakt-ID. Daher kannst du eine Marktplatz-Gastbestellung auch im Kontaktdatensatz im Menü *CRM » Kontakte* in einen regulären Kontaktdatensatz umwandeln. Gehe dazu wie im Folgenden beschrieben vor.
 
 [.instruction]
 Gastbestellung in regulären Kontaktdatensatz umwandeln:
