--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -264,7 +264,9 @@ Eigenschaft mit dem Kontakt verknüpfen:
 . Klicke auf der linken Seite auf *Eigenschaften*. +
 → Alle für den Kontakt verfügbaren Eigenschaften werden angezeigt und du kannst diese dort hinzufügen.
 
-// letzten Satz prüfen.
+//// 
+letzten Satz in der Konfig prüfen.
+////
 
 [#eigenschaften-auf-dokumenten]
 === Eigenschaften auf Dokumenten ausgeben
